--- a/CCMS/Views/Home/AddDocumentstoTickets.cshtml
+++ b/CCMS/Views/Home/AddDocumentstoTickets.cshtml
@@ -58,6 +58,7 @@
         color: #057a52 !important;
     }
 </style>
+@*<link href="~/AngularJs/HTimeline.css" rel="stylesheet" />*@
 <script src="~/AngularJs/controllers/AddDocumentsTicketsCtrl.js"></script>
 <!-- DataTables -->
 <link rel="stylesheet" href="~/Content/dashboardNew/plugins/datatables-bs4/css/dataTables.bootstrap4.min.css">
@@ -84,6 +85,102 @@
                     </ol>
                 </div><!-- /.col -->
             </div><!-- /.row -->
+
+            @*<div class="timeline-wrapper clearfix">
+                <div class="timeline-content-day">
+                    <div class="timeline-line"></div>
+                    <div class="timeline-content-item active" data-timeline="hour-8">
+                        <span>1</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Contact Mode</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-9">
+                        <span>2</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Appointment Booked</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-10">
+                        <span>3</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Claim Lodged</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-11">
+                        <span>4</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Benifits Medical Examination</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-12">
+                        <span>5</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Medical Panel Assessment</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-13">
+                        <span>6</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Trust Certificationn</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-14">
+                        <span>7</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Lorem Ipsum</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-15">
+                        <span>8</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Lorem Ipsum</span>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="timeline-content-item" data-timeline="hour-16">
+                        <span>9</span>
+                        <div class="timeline-content-item-reveal">
+                            <a href="#">
+                                <img src="https://picsum.photos/g/300/300">
+                                <span>Lorem Ipsum</span>
+                            </a>
+                        </div>
+                    </div>
+
+                </div>
+            </div>*@
         </div><!-- /.container-fluid -->
     </div>
     <!-- /.content-header -->
