--- a/CCMS/Views/Shared/_LayoutCCMS.cshtml
+++ b/CCMS/Views/Shared/_LayoutCCMS.cshtml
@@ -409,7 +409,16 @@
                             <a href="../Home/Dashboard" class="nav-link">
                                 <i class="nav-icon fa fa-tachometer-alt"></i>
                                 <p>
-                                    Dashbord
+                                    Dashbord 1
+                                    @*<i class="fas fa-angle-left right"></i>*@
+                                </p>
+                            </a>
+                        </li>  
+                        <li class="nav-item">
+                            <a href="../Home/DashboardNew" class="nav-link">
+                                <i class="nav-icon fa fa-tachometer-alt"></i>
+                                <p>
+                                    Dashbord 2
                                     @*<i class="fas fa-angle-left right"></i>*@
                                 </p>
                             </a>
