--- a/CCMS/Views/Home/DashboardNew.cshtml
+++ b/CCMS/Views/Home/DashboardNew.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Dashboard";
     Layout = "~/Views/Shared/_LayoutCCMS.cshtml";
 }
-<script src="~/AngularJs/controllers/HomeCntrl.js"></script>
+<script src="~/AngularJs/controllers/MapCntrl.js"></script>
 @*<link rel="stylesheet" href="~/Content/dashboardNew/dist/css/adminlte.min.css">*@
 
 <link rel="stylesheet"
@@ -31,12 +31,42 @@
         padding-left: 10px !important
     }
 </style>
+<style>
+   .leaflet-bottom {
+        position: absolute;
+        z-index: 1000;
+        pointer-events: none;
+        display: none;
+    }
 
-<div ng-controller="homeCntrl" ng-cloak style="zoom:0.9">
+    .marker-cluster-small {
+        background-color: #d4e9be;
+    }
+
+        .marker-cluster-small div {
+            background-color: #d4e9be;
+        }
+
+    .marker-cluster-medium {
+        background-color: #fde8c6;
+    }
+
+        .marker-cluster-medium div {
+            background-color: #fde8c6;
+        }
+
+    .marker-cluster-large {
+        background-color: #d2bdcf;
+    }
+
+        .marker-cluster-large div {
+            background-color: #d2bdcf;
+        }
+</style>
+<div ng-controller="MapCntrl" ng-cloak style="zoom:0.9">
     <div class="content-header">
         <div class="row">
             <div class="col-sm-6">
-                @*<h1 class="m-0">Dashboard</h1>*@
             </div><!-- /.col -->
             <div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
@@ -52,51 +82,24 @@
 
     <div class="container-fluid">
 
-        <!--<div class="row">
+        <div class="row">
             <div class="col-md-12">
                 <div class="box card-success card-outline">
                     <div class="box-header with-border">
-                        <h5 class="box-title" style="color: #28a745;">3D Map</h5>
-                        <div class="box-tools pull-right">
-                            <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                                <i class="fa fa-minus"></i>
-                            </button>
-                        </div>-->
-                        <!-- /.box-tools -->
-                    <!--</div>-->
-                    <!-- /.box-header -->
-                    <!--<div class="box-body" style="margin:0">
-                        <div id="map-three-d" style="width: 100% !important; height: 500px !important"></div>
-                    </div>-->
-                    <!-- /.box-body -->
-                <!--</div>
-            </div>
-        </div>-->
-        <div class="row">
-            <div class="col-md-6">
-                <div class="box card-success card-outline">
-                    <div class="box-header with-border">
-                        <h5 class="box-title" style="color: #28a745;">Service Provider Sites</h5>
-                        <div class="box-tools pull-right">
-                            <button type="button" class="btn btn-box-tool" data-widget="collapse">
-                                <i class="fa fa-minus"></i>
-                            </button>
-                        </div>
-                        <!-- /.box-tools -->
-                    </div>
-                    <!-- /.box-header -->
-                    <div class="box-body" style="margin:0">
-                        <div id="mapServiceProvidr" style="width: 100% !important; height: 500px !important"></div>
-                    </div>
-                    <!-- /.box-body -->
+                        <h5 class="box-title" style="color: #28a745;">
+                            <a href="#" ng-repeat="t in map_types"
+                               style="margin:5px"
+                               id="{{t.id}}"
+                               ng-class="{'btn-default' : t.type!==selectedType, 'btn-info' : t.type===selectedType}"
+                               ng-click="showMapByType(t.type)"
+                               class="btn">
+                                {{t.type}}
+                            </a>
 
-                </div>
-            </div>
-            <div class="col-md-6">
-                <div class="box card-success card-outline">
-                    <div class="box-header with-border">
-                        <h5 class="box-title" style="color: #28a745;">Claimant Population</h5>
+                        </h5>
                         <div class="box-tools pull-right">
+                            @*<span>Claimant Population : {{claimantCount}}</span>
+                                <span>Service Provider Sites : {{serviceProviderCount}}</span>*@
                             <button type="button" class="btn btn-box-tool" data-widget="collapse">
                                 <i class="fa fa-minus"></i>
                             </button>
@@ -113,30 +116,8 @@
 
         </div>
 
-        <!-- /.box -->
-
-        @*<script>
-            var map = L.eeGeo.map("map-three-d", "683cb6d8760f355e11bc3d6aed7ac358", {
-                center: [51.517327, -0.120005],
-                zoom: 15
-            });
-            var myIcon = L.icon({
-                iconUrl: 'https://th.bing.com/th/id/OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa?pid=ImgDet&rs=1',
-                iconRetinaUrl: 'https://th.bing.com/th/id/OIP.mJMPC7BzwPoHjuzyeMG4WAHaHa?pid=ImgDet&rs=1',
-                iconSize: [29, 24],
-                iconAnchor: [9, 21],
-                popupAnchor: [0, -14],
-            })
-
-            setTimeout(function () {
-                map.setView([51.514613, -0.081019], 16, { headingDegrees: 204.374, tiltDegrees: 15.0 });
-                L.marker([51.517327, -0.120005], { icon: myIcon }).addTo(map);
-
-            }, 10000);
-        </script>*@
-        <script type="text/javascript" src="~/maps/leaf-T804.js"></script>
-        <script type="text/javascript" src="~/maps/leaf-demo.js"></script>
-        @*<script type="text/javascript" src="~/maps/markers.js"></script>*@
+        @*<script type="text/javascript" src="~/maps/leaf-T804.js"></script>*@
+        @*<script type="text/javascript" src="~/maps/leaf-demo.js"></script>*@
     </div>
 
 </div>
