--- a/CCMS/Views/Home/DashboardNew.cshtml
+++ b/CCMS/Views/Home/DashboardNew.cshtml
@@ -64,21 +64,21 @@
         }
 </style>
 <div ng-controller="MapCntrl" ng-cloak style="zoom:0.9">
-    <div class="content-header">
+    <!--<div class="content-header">
         <div class="row">
             <div class="col-sm-6">
-            </div><!-- /.col -->
-            <div class="col-sm-6">
+            </div>--><!-- /.col -->
+            <!--<div class="col-sm-6">
                 <ol class="breadcrumb float-sm-right">
                     <li class="breadcrumb-item"><a href="#">Home</a></li>
                     <li class="breadcrumb-item active">Dashboard</li>
                 </ol>
-            </div><!-- /.col -->
-        </div><!-- /.row -->
+            </div>--><!-- /.col -->
+        <!--</div>--><!-- /.row -->
 
-    </div>
+    <!--</div>-->
     <!-- /.content-header -->
-    <hr style="margin-top:0 !important" />
+    <hr style="margin-top:10px !important" />
 
     <div class="container-fluid">
 
